# google-ads-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  google_ads_client.py  pyproject.toml  requirements.txt  server.py
